--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Area 51 Hotline</title>
+        <title>Occy Proccy Site</title>
         <style>
                 BODY {
                   width: 100%;
@@ -57,56 +57,56 @@
         <h1>Welcome to Spegchu82 mah dude</h1>
     </head>
     <body>
-        <p>    Get yer heccin chill'en of me property ye, I dent hveth thy candy the be lerkin fer.
+        <p>   Occy Proccy Sitey Witey.
         </p>
         <p>
         <div id="navbar"></div>
         <div class="main">
-            <script>alert("I don't know...");</script>
+            <script>alert("Oh hi dere.");</script>
 
-         <p><a href="https://spegchu82.github.io/hw.html">Happy Wheels</a>
+         <p><a href="https://ocproc.github.io/hw.html">Happy Wheels</a>
          </p>
-        <p><a href="https://spegchu82.github.io/au.html">Achievement Unlocked</a>
+        <p><a href="https://ocproc.github.io/au.html">Achievement Unlocked</a>
         </p>
-        <p><a href="https://spegchu82.github.io/au2.html">Achievement Unlocked 2</a>
+        <p><a href="https://ocproc.github.io/au2.html">Achievement Unlocked 2</a>
         </p>
-         <p><a href="https://spegchu82.github.io/rz.html">Raze</a>
+         <p><a href="https://ocproc.github.io/rz.html">Raze</a>
          </p>
-         <p><a href="https://spegchu82.github.io/rz3.html">Raze 3</a>
+         <p><a href="https://ocproc.github.io/rz3.html">Raze 3</a>
          </p>
-         <p><a href="https://spegchu82.github.io/gm2.html">Gun Mayhem 2</a>
+         <p><a href="https://ocproc.github.io/gm2.html">Gun Mayhem 2</a>
          </p>
-         <p><a href="https://spegchu82.github.io/cyp.html">CAN Your Pet [VERY SFL]</a>
+         <p><a href="https://ocproc.github.io/cyp.html">CAN Your Pet [VERY SFL]</a>
          </p>
-         <p><a href="https://spegchu82.github.io/ltf.html">Learn to Fly</a>
+         <p><a href="https://ocproc.github.io/ltf.html">Learn to Fly</a>
          </p>
-         <p><a href="https://spegchu82.github.io/ltf2.html">Learn to Fly 2</a>
+         <p><a href="https://ocproc.github.io/ltf2.html">Learn to Fly 2</a>
          </p>
-         <p><a href="https://spegchu82.github.io/ltf3.html">Learn to Fly 3</a>
+         <p><a href="https://ocproc.github.io/ltf3.html">Learn to Fly 3</a>
          </p>
-         <p><a href="https://spegchu82.github.io/btd.html">Bloons Tower Defense</a>
+         <p><a href="https://ocproc.github.io/btd.html">Bloons Tower Defense</a>
          </p>
-         <p><a href="https://spegchu82.github.io/btd2.html">Bloons Tower Defense 2</a>
+         <p><a href="https://ocproc.github.io/btd2.html">Bloons Tower Defense 2</a>
          </p>
-         <p><a href="https://spegchu82.github.io/btd3.html">Bloons Tower Defense 3</a>
+         <p><a href="https://ocproc.github.io/btd3.html">Bloons Tower Defense 3</a>
          </p>
-         <p><a href="https://spegchu82.github.io/btd5.html">Bloons Tower Defense 5</a>
+         <p><a href="https://ocproc.github.io/btd5.html">Bloons Tower Defense 5</a>
          </p>
-         <p><a href="https://spegchu82.github.io/btd5h.html">BTD5 Hacked</a>
+         <p><a href="https://ocproc.github.io/btd5h.html">BTD5 Hacked</a>
          </p>
-         <p><a href="https://spegchu82.github.io/pl.html">Papa Louie</a>
+         <p><a href="https://ocproc.github.io/pl.html">Papa Louie</a>
          </p>
-         <p><a href="https://spegchu82.github.io/pl2.html">Papa Louie 2</a>
+         <p><a href="https://ocproc.github.io/pl2.html">Papa Louie 2</a>
          </p>
-         <p><a href="https://spegchu82.github.io/pl3.html">Papa Louie 3</a>
+         <p><a href="https://ocproc.github.io/pl3.html">Papa Louie 3</a>
          </p>
-         <p><a href="https://spegchu82.github.io/pb.html">Papa's Bakeria</a>
+         <p><a href="https://ocproc.github.io/pb.html">Papa's Bakeria</a>
          </p>
-         <p><a href="https://spegchu82.github.io/ps.html">Papa's Scooperia</a>
+         <p><a href="https://ocproc.github.io/ps.html">Papa's Scooperia</a>
          </p>
-         <p><a href="https://spegchu82.github.io/can.html">Canabalt</a>
+         <p><a href="https://ocproc.github.io/can.html">Canabalt</a>
          </p>
-         <p><a href="https://spegchu82.github.io/gu2.html">Give Up 2</a>
+         <p><a href="https://ocproc.github.io/gu2.html">Give Up 2</a>
          </p>
-    <footer>2019 Spegady and Raichu82</footer>
+    <footer>2019 Human Succy</footer>
 </html>
